syntax = "proto3";

package ftp;

message FileInfo {
  string name        = 1;
  int64  size_bytes  = 2;
  string modified_at = 3;
}

message ListFilesRequest {}

message ListFilesResponse {
  repeated FileInfo files = 1;
}

message DownloadFileRequest {
  string file_name    = 1;
  int32  chunk_size_kb = 2;
}

message FileChunk {
  bytes data   = 1;
  int64 offset = 2;
}

service FtpService {
  rpc ListFiles (ListFilesRequest) returns (ListFilesResponse);
  rpc DownloadFile (DownloadFileRequest) returns (stream FileChunk);
}
